<resources>
    <string name="app_name">MySimpleSensorApp</string>
    <string name="textViewTxt">verfügbare Sensoren</string>
    <string name="menuItemTxt">GyroActivity</string>
    <string name="resolutionTVtxt">Auflösung: %1$f rad/s</string>
    <string name="rangeTVtxt">max. Messbereich: %1$f rad/s</string>
    <string name="XradsTVtxt">X (rad/s)</string>
    <string name="YradsTVtxt">Y (rad/s)</string>
    <string name="ZradsTVtxt">Z (rad/s)</string>
    <string name="noAvailablePosition">no available position</string>

    <string name="no_permission">No Permission</string>
    <string name="location_value">Latitude: %1$.4f\nLongitude: %2$.4f\nZeit:  %3$tr</string>
    <string name="no_available_position">no Position</string>






</resources>